<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#2196F3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dhruv.resumemanager.LoginActivity">

    <Button
        android:id="@+id/button_login"
        android:text="@string/button_login"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:background="@drawable/button"
        android:textColor="#FFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_name"
        android:maxLines="1"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:hint="@string/edit_name"
        android:layout_width="match_parent"
        android:layout_above="@id/button_login"
        android:singleLine="true"
        android:ellipsize="end"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_password"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:maxLines="1"
        android:hint="@string/hint_pass"
        android:layout_above="@id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:singleLine="true"
        android:ellipsize="end"
        android:textColorHint="#FFF"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_username"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/hint_username"
        android:layout_above="@id/edit_password"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:singleLine="true"
        android:ellipsize="end"
        android:inputType="text">
        <requestFocus />
        </EditText>

    <TextView
        android:id="@+id/text_rm"
        android:text="@string/resume_manager"
        android:textColor="#FFF"
        android:textStyle="italic"
        android:layout_marginBottom="47dp"
        android:layout_above="@id/edit_username"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
